welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
}
def marqueSol() {baisseBrosse() ; leveBrosse();}
def faireV () {
  avancer(2) ; marqueSol() ; avance() ; gauche() ; avance() ; marquerSol() ; recule() ; droite() ; marquerSol() ; avance(2) ; gauche() ;
  }